# FamilyPoint

./: .gitignore  CLOUDINARY_SETUP.md  PROJECT_ARCHITECTURE_AND_DEMO.md  README.md  YOUR_CLOUDINARY_SETUP.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  clear_db.py  debug_users.py  migrate_announcement_dismissals.py  migrate_announcements.py  migrate_evidence.py  pyproject.toml  raw_migrate_fix.py  requirements.txt
backend/app/: main.py  seed.py
backend/app/api/v1/: __init__.py  announcements.py  auth.py  children.py  points.py  rewards.py  settings.py  submissions.py  tasks.py  uploads.py  users.py
backend/app/core/: auth.py  cloudinary_config.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: __init__.py  badges.py  levels.py  streaks.py
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ChildDashboard.tsx  Login.tsx  ParentDashboard.tsx  Register.tsx
